break portfolio down into react handlebars stuff

--- a/views/home.tmpl
+++ b/views/home.tmpl
@@ -1,2 +1,122 @@
+<div id="about" class="paddsection">
+    <div class="container">
+        <div class="row justify-content-between">
 
-test
+            <div class="col-lg-4 ">
+                <div class="div-img-bg">
+                    <div class="about-img">
+                        <img src="assets/img/me.jpg" class="img-responsive" alt="me">
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-lg-7">
+                <div class="about-descr">
+
+                    <p class="p-heading">Hello, my name is Rachel LeBoeuf. I am currently studying Software Development.</p>
+                    <p class="separator">My work experience prior to the Bootcamp includes Retail management, Dancing professionally, and being entrusted with a long-term nanny position. This colorful work background has built into the ability to adapt easily and mesh well with new and challenging roles and environments. Please feel free to review my work and contact me with any questions or inquiries. Thank you.</p>
+
+                </div>
+
+            </div>
+        </div>
+    </div>
+</div>
+
+<div id="portfolio" class="paddsection">
+
+    <div class="container">
+        <div class="section-title text-center">
+            <h2>My Portfolio</h2>
+        </div>
+    </div>
+
+    <div class="container">
+
+        <div class="row portfolio-container">
+            <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+                <a href="https://rachelleboeuf.github.io/amazing-demo/" target="_blank" class="details-link" title="More Details">
+                    <img src="./assets/img/project-amazing.jpg" class="img-fluid" alt="">
+                </a>
+            </div>
+
+            <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+                <a href="https://rachelleboeuf.github.io/mini-project-1/" target="_blank" class="details-link" title="More Details">
+                    <img src="./assets/img/project-min-project.jpg" class="img-fluid" alt="">
+                </a>
+            </div>
+
+            <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+                <a href="https://rachelleboeuf.github.io/password-generator/" target="_blank" class="details-link" title="More Details">
+                    <img src="./assets/img/project-password.jpg" class="img-fluid" alt="">
+                </a>
+            </div>
+
+            <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+                <a href="https://rachelleboeuf.github.io/Coding-Quiz/" target="_blank" class="details-link" title="More Details">
+                    <img src="./assets/img/project-quiz.jpg" class="img-fluid" alt="">
+                </a>
+            </div>
+
+            <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+                <a href="https://rachelleboeuf.github.io/prework-about-me/" target="_blank" class="details-link" title="More Details">
+                    <img src="./assets/img/project-rachel.jpg" class="img-fluid" alt="">
+                </a>
+            </div>
+
+            <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+                <a href="https://rachelleboeuf.github.io/weather-dashboard/" target="_blank" class="details-link" title="More Details">
+                    <img src="./assets/img/project-weather.jpg" class="img-fluid" alt="">
+                </a>
+            </div>
+        </div>
+
+    </div>
+</div>
+
+<div id="contact" class="paddsection">
+    <div class="container">
+        <div class="contact-block1">
+            <div class="row">
+
+                <div class="col-lg-6">
+                    <div class="contact-contact">
+
+                        <ul class="contact-details">
+                            <fieldset>
+                                <legend>Get In Touch</legend>
+                                <span>---------------------------</span>
+                                <li><i class="bi bi-pin-map"></i> <span>Charlotte, NC</span></li>
+                                <li><i class="bi bi-phone"></i> <span><a href="tel:1 (803) 457 - 6925">+1 (803) 457 - 6925</a></span></li>
+                                <li><i class="bi bi-envelope"></i> <span><a href="mailto:rachelnleboeuf@gmail.com">rachelnleboeuf@gmail.com</a></span></li>
+                            </fieldset>
+                            <fieldset>
+                                <br>
+                                <legend>Find Me On</legend>
+                                <span>---------------------------</span>
+                                <li><i class="bi bi-github"></i> <span><a href="https://github.com/rachelleBoeuf/" target="_blank">Github Profile</a></span></li>
+                                <li><i class="bi bi-linkedin"></i> <span><a href="https://www.linkedin.com/in/rachel-leboeuf-8a9080235/" target="_blank">LinkedIn Profile</a></span></li>
+                            </fieldset>
+                        </ul>
+
+                    </div>
+                </div>
+
+                <div class="col-lg-6">
+                    <div id="resume">
+                        <div class="card bg-light text-dark">
+                            <i class="bi bi-file-pdf card-watermark-icon"></i>
+                            <div class="card-img-overlay">
+                                <h5 class="card-title">Want a copy of my Resume (PDF)?</h5>
+                                <p class="card-text">Please feel free to download this copy of my resume and pass it around!  Feel free to contact me with
+                                    any relevant positions based on my portfolio :)</p>
+                                <a href="./assets/My_Resume_1.pdf" class="btn btn-outline-primary card-bottom-button" style="position: absolute !important;">Download Resume (PDF)</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </div>
+</div>
