--- a/views/partials/header.tmpl
+++ b/views/partials/header.tmpl
@@ -1,23 +1,15 @@
-<div class="col-sm-12">
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav">
-        <li class="nav-item active">
-          <a class="nav-link" href="/">Home</a>
-        </li>
-        {{#if user.logged_in}}
-          <li class="nav-item">
-            <a class="nav-link" href="Dashboard">Dashboard</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/Logout">Logout</a>
-          </li>
-        {{else}}
-          <li class="nav-item">
-            <a class="nav-link" href="/Login">Login</a>
-          </li>
-        {{/if}}
-      </ul>
-    </div>
-  </nav>
+<div class="container d-flex align-items-center justify-content-between">
+
+  <h1 class="logo"><a href="#about">Rachel's Portfolio</a></h1>
+
+  <nav id="navbar" class="navbar">
+    <ul>
+      <li><a class="nav-link scrollto" href="#about">About</a></li>
+      <li><a class="nav-link  scrollto" href="#portfolio">Portfolio</a></li>
+      <li><a class="nav-link  scrollto" href="#resume">Resume</a></li>
+      <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
+    </ul>
+    <i class="bi bi-list mobile-nav-toggle"></i>
+  </nav><!-- .navbar -->
+
 </div>
