--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -181,6 +181,7 @@ p {
   background-color: #fff;
   top: -100%;
   box-shadow: 0px 2px 25px rgba(0, 0, 0, 0.08);
+  border-bottom: 1px solid lightgray;
 }
 #header.header-scrolled, #header.header-inner-pages {
   top: 0;
