all the changes that make awesome!

--- a/views/partials/footer.tmpl
+++ b/views/partials/footer.tmpl
@@ -4,6 +4,7 @@
         <ul class="list-unstyled">
             <li><a href="https://github.com/rachelleBoeuf/" target="_blank"><i class="bi bi-github"></i></a></li>
             <li><a href="https://www.linkedin.com/in/rachel-leboeuf-8a9080235/" target="_blank"><i class="bi bi-linkedin"></i></a></li>
+            <li><a href="https://instagram.com/rachelnleboeuf" target="_blank"><i class="bi bi-instagram"></i></a></li>
         </ul>
 
     </div>
