--- a/views/home.tmpl
+++ b/views/home.tmpl
@@ -72,36 +72,13 @@
         </div>
 
     </div>
+
 </div>
+<div id="resume" class="paddsection">
 
-<div id="contact" class="paddsection">
     <div class="container">
-        <div class="contact-block1">
+        <div class="resume-wrapper">
             <div class="row">
-
-                <div class="col-lg-6">
-                    <div class="contact-contact">
-
-                        <ul class="contact-details">
-                            <fieldset>
-                                <legend>Get In Touch</legend>
-                                <span>---------------------------</span>
-                                <li><i class="bi bi-pin-map"></i> <span>Charlotte, NC</span></li>
-                                <li><i class="bi bi-phone"></i> <span><a href="tel:1 (803) 457 - 6925">+1 (803) 457 - 6925</a></span></li>
-                                <li><i class="bi bi-envelope"></i> <span><a href="mailto:rachelnleboeuf@gmail.com">rachelnleboeuf@gmail.com</a></span></li>
-                            </fieldset>
-                            <fieldset>
-                                <br>
-                                <legend>Find Me On</legend>
-                                <span>---------------------------</span>
-                                <li><i class="bi bi-github"></i> <span><a href="https://github.com/rachelleBoeuf/" target="_blank">Github Profile</a></span></li>
-                                <li><i class="bi bi-linkedin"></i> <span><a href="https://www.linkedin.com/in/rachel-leboeuf-8a9080235/" target="_blank">LinkedIn Profile</a></span></li>
-                            </fieldset>
-                        </ul>
-
-                    </div>
-                </div>
-
                 <div class="col-lg-6">
                     <div id="resume">
                         <div class="card bg-light text-dark">
@@ -115,8 +92,76 @@
                         </div>
                     </div>
                 </div>
-
+                <div class="col-lg-6">
+                    <img src="./assets/img/resumeSS.png" class="img-fluid" alt="Responsive image" style="max-height: 300px">
+                </div>
             </div>
         </div>
     </div>
+
+</div>
+<div id="contact" class="paddsection">
+
+    <div class="container">
+        <div class="contact-block1">
+            <div class="row">
+
+                <div class="col-lg-6">
+                    <ul class="contact-details">
+                        <fieldset>
+                            <legend>Get In Touch</legend>
+                            <span>---------------------------</span>
+                            <li><i class="bi bi-pin-map"></i> <span>Charlotte, NC</span></li>
+                            <li><i class="bi bi-phone"></i> <span><a href="tel:1 (803) 457 - 6925">+1 (803) 457 - 6925</a></span></li>
+                            <li><i class="bi bi-envelope"></i> <span><a href="mailto:rachelnleboeuf@gmail.com">rachelnleboeuf@gmail.com</a></span></li>
+                        </fieldset>
+                        <fieldset>
+                            <br>
+                            <legend>Find Me On</legend>
+                            <span>---------------------------</span>
+                            <li><i class="bi bi-github"></i> <span><a href="https://github.com/rachelleBoeuf/" target="_blank">Github Profile</a></span></li>
+                            <li><i class="bi bi-linkedin"></i> <span><a href="https://www.linkedin.com/in/rachel-leboeuf-8a9080235/" target="_blank">LinkedIn Profile</a></span></li>
+                            <li><i class="bi bi-instagram"></i> <span><a href="https://instagram.com/rachelnleboeuf" target="_blank">Instagram Profile</a></span></li>
+                        </fieldset>
+                    </ul>
+                </div>
+                <div class="col-lg-6">
+                    <form action="/submit" method="post" role="form" class="php-email-form">
+                        <div class="row gy-3">
+
+                            <div class="col-lg-12">
+                                <div class="form-group contact-block1">
+                                    <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required>
+                                </div>
+                            </div>
+
+                            <div class="col-lg-12">
+                                <div class="form-group">
+                                    <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" required>
+                                </div>
+                            </div>
+
+                            <div class="col-lg-12">
+                                <div class="form-group">
+                                    <textarea class="form-control" name="message" placeholder="Message" required></textarea>
+                                </div>
+                            </div>
+
+                            <div class="col-lg-12">
+                                <div class="loading">Loading</div>
+                                <div class="error-message"></div>
+                                <div class="sent-message">Your message has been sent. Thank you!</div>
+                            </div>
+
+                            <div class="mt-0">
+                                <input type="submit" class="btn btn-defeault btn-send" value="Send message">
+                            </div>
+
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+
 </div>
